--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kms/froala-editor-bundle",
+    "name": "soulghard/froala-editor-bundle",
     "type": "symfony-bundle",
     "description": "Provides a Froala editor integration for Symfony 2/3.",
     "keywords": [ "froala", "editor", "wysiwyg" ],
@@ -25,6 +25,6 @@
         "symfony/yaml": "^2.3|^3.0"
     },
     "autoload": {
-        "psr-4": { "KMS\\FroalaEditorBundle\\": "" }
+        "psr-4": { "Soulghard\\FroalaEditorBundle\\": "" }
     }
 }
